2002-09-10  Marcus Brinkmann  <marcus@gnu.org>

	* hurdio.c (hurdio_writer_loop): Desert the DTR on all errors, not
	only EIO.
	(hurdio_reader_loop): Likewise.

2002-08-18  Roland McGrath  <roland@frob.com>

	* main.c (main): Open with O_RDWR only for hurdio bottomhalf.

2002-06-25  Roland McGrath  <roland@frob.com>

	* term.h (struct bottomhalf): New member `fini'.
	* hurdio.c (hurdio_fini): New function.
	(hurdio_bottom): Use it.
	* devio.c (devio_fini): New function.
	(devio_bottom): Use it.
	* ptyio.c (ptyio_bottom): Add 0 entry for `fini'.

	* main.c (trivfs_runtime_argp): New variable.
	(options): Add --name/-N and --type/-T options.
	(parse_opt): Collect parsed options in temporary storage and apply
	them only at final success.  For T_HURDIO, allow absent arg.
	For non-startup parsing call, allow any missing args.
	(tty_type_names): New const variable.
	(trivfs_append_args): New function.
	(main): Open underlying node with O_RDWR.
	* hurdio.c (wait_for_dtr): If tty_arg is null, use termctl->underlying
	instead of opening a node by name.
	(hurdio_desert_dtr): If tty_arg is null, don't deallocate ioport.

2002-06-25  Marcus Brinkmann  <marcus@gnu.org>

	* term.h (struct bottomhalf): New member GWINSZ.
	* devio.c (devio_bottom): Add new member.
	* ptyio.c (ptyio_bottom): Likewise.
	* hurdio.c (hurdio_bottom): Likewise.
	(hurdio_gwinsz): New function.
	(tioc_caps): Change type to unsigned int.
	(TIOC_CAP_GWINSZ): New symbol.
	* users.c (open_hook): Call GWINSZ of bottom layer after
	establishing the carrier.

2002-06-13  Roland McGrath  <roland@frob.com>

	* ptyio.c (pty_io_readable): int -> size_t in argument type.
	* term.h: Update decl.
	* users.c (trivfs_S_io_write): int -> size_t in AMT argument type.
	(trivfs_S_io_readable): Likewise.
	(trivfs_S_io_read): Likewise.  Also u_int -> size_t, off_t -> loff_t.
	(trivfs_S_io_write): Likewise.
	(trivfs_S_io_map): Add reply port args.

2002-05-28  Roland McGrath  <roland@frob.com>
